проверка третьей  проектной работы №2

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             </p>
           </div>
           <div class="content__info">
-            <h3 class="content__info-title title-decor">Дофамин</h3>
+            <h3 class="content__info-title title-decor title_limitation">
+              Дофамин
+            </h3>
             <p class="content__info-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -101,7 +103,9 @@
         <ul class="content__card-list">
           <li class="content__card-list-item">
             <article class="content__info content__card-type_multi">
-              <h3 class="content__info-title title-decor">Многозадачность</h3>
+              <h3 class="content__info-title title-decor title_limitation">
+                Многозадачность
+              </h3>
               <p class="content__info-text">
                 Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -151,10 +155,12 @@
         </div>
         <div class="content">
           <div class="content__info">
-            <h3 class="title-decor">
+            <h3 class="title-decor title_limitation-info">
               5 простых (на самом деле не очень) советов
             </h3>
-            <h4 class="content__info-title_adviсe content__info-title">
+            <h4
+              class="content__info-title_adviсe content__info-title title_limitation"
+            >
               Представьте небо и облака
             </h4>
             <p class="content__info-text">
@@ -169,7 +175,9 @@
             </p>
           </div>
           <div class="content__info">
-            <h4 class="content__info-title_adviсe content__info-title">
+            <h4
+              class="content__info-title_adviсe content__info-title title_limitation"
+            >
               Включите музыку
             </h4>
             <p class="content__info-text">
@@ -180,7 +188,9 @@
             </p>
           </div>
           <div class="content__info">
-            <h4 class="content__info-title_adviсe content__info-title">
+            <h4
+              class="content__info-title_adviсe content__info-title title_limitation"
+            >
               Прогуляйтесь
             </h4>
             <p class="content__info-text">
@@ -194,7 +204,9 @@
             </p>
           </div>
           <div class="content__info">
-            <h4 class="content__info-title_adviсe content__info-title">
+            <h4
+              class="content__info-title_adviсe content__info-title title_limitation"
+            >
               Хорошо ешьте
             </h4>
             <p class="content__info-text">
@@ -205,7 +217,9 @@
             </p>
           </div>
           <div class="content__info">
-            <h4 class="content__info-title_adviсe content__info-title">
+            <h4
+              class="content__info-title_adviсe content__info-title title_limitation"
+            >
               Читайте
             </h4>
             <p class="content__info-text">
